[tool.poetry]
name = "kubectlfr"
version = "0.1.0"
description = "Utilitaire de contrôle de Kubernetes"
authors = ["Théophane Vié <theophanevie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
